<resources>
    <string name="app_name">Nutrition-System</string>
    <string name="self_name">سامانه سلف دانشگاه اصفهان</string>
    <string name="user_name"><b>نام کاربری</b></string>
    <string name="password"><b>رمز عبور</b></string>
    <string name="login_text">ورود</string>
    <string name="forget_pass">فراموشی رمز عبور</string>
    <string name="hint_mobile_forget_pass">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="send_code">ارسال رمز</string>
    <string name="cash">موجودی</string>
    <string name="sunday">یکشنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="saturday">اشنبه</string>
    <string name="breakfast">صبحانه</string>
    <string name="lunch">ناهار</string>
    <string name="dinner">شام</string>
    <string name="increase_cash">افزایش موجودی</string>
    <string name="prices">جمع خرید</string>
    <string name="thursday">پنجشنبه</string>
    <string name="friday">جمعه</string>
    <string name="submit_main">ثبت نهایی</string>
    <string name="date">"دوشنبه 10/9 "</string>
    <string name="choose_food">صبحانه خود را انتخاب کنید</string>
    <string name="chicken_fries">مرغ و سیب زمینی</string>
    <string name="price"> قیمت: 3000 تومن</string>
    <string name="select">انتخاب</string>
</resources>