<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activities.AuthenticationActivities.PasswordActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:id="@+id/back_btn"
        android:layout_marginBottom="50dp"
        android:src="@drawable/back"
        android:clickable="true"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pass"
        android:textColor="@color/testColorLogin"
        android:gravity="center"
        android:textSize="36dp"
        android:layout_marginBottom="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
       />

    <TextView
        android:id="@+id/mobile_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:textSize="18dp"
        android:text="@string/hint_mobile_forget_pass"
        android:textColor="@color/testColorLogin"
        android:layout_marginTop="50dp"
       />
    <EditText
        android:id="@+id/mobile_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="30dp"
        android:padding="15dp"
        android:backgroundTint="#EEFFFEFE"/>
    <Button
        android:id="@+id/send_code_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:layout_margin="30dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:textSize="23dp"
        android:text="@string/send_code"
        android:textColor="#EEFFFEFE"
        android:backgroundTint="@color/testColorLogin"/>

</LinearLayout>