<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:background="@drawable/background"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/date"
        style="@style/BottomSheetItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/text_dark_blue"
        android:textSize="@dimen/text_login_Size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/BottomSheetItem"
        android:id="@+id/choose_food"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_food"
        android:textColor="@color/text_dark_blue"
        android:textSize="@dimen/text_login_Size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date" />

    <LinearLayout
        style="@style/BottomSheetItem"
        android:id="@+id/food_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_food">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:id="@+id/image_food_one"
                android:layout_height="80dp"
                android:src="@drawable/no_image"/>
            <TextView
                style="@style/BottomSheetItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken_fries"
                android:padding="2dp"
                android:id="@+id/name_Food_one"
                android:textColor="@color/text_dark_blue"
                android:textSize="@dimen/text_login_Size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />
            <TextView
                style="@style/BottomSheetItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="5dp"
                android:id="@+id/price_food_one"
                android:textColor="#CC1E2640"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/text_login_Size"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:id="@+id/image_food_two"
                android:layout_height="80dp"
                android:src="@drawable/no_image"/>
            <TextView
                style="@style/BottomSheetItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken_fries"
                android:padding="2dp"
                android:id="@+id/name_Food_two"
                android:textColor="@color/text_dark_blue"
                android:textSize="@dimen/text_login_Size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />
            <TextView
                style="@style/BottomSheetItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:padding="5dp"
                android:id="@+id/price_food_two"
                android:textColor="#CC1E2640"
                android:textSize="14sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />
        </LinearLayout>
    </LinearLayout>
    <Button
        style="@style/BottomSheetItem"
        android:layout_width="120dp"
        android:id="@+id/select_food"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_layout"
        android:backgroundTint="@color/text_dark_blue"
        android:background="@drawable/rounded_corner"
        android:text="@string/select"
        android:textColor="#EEF8F5F5"
        android:layout_marginBottom="15dp"
        android:padding="2dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>