<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/self"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="#40FFFFFF">
    <ImageView
        android:layout_gravity="center"
        android:layout_width="150dp"
        android:id="@+id/self_logo"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        android:src="@drawable/logo_isfahan"/>
      <TextView
          android:id="@+id/self_title"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/self_name"
          android:layout_marginTop="15dp"
          android:textSize="@dimen/self_login_title"
          android:textColor="@color/testColorLogin"
          app:layout_constraintTop_toBottomOf="@id/self_logo"
          app:layout_constraintRight_toRightOf="parent"
          app:layout_constraintLeft_toLeftOf="parent"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_et"
            android:padding="10dp"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:hint="@string/user_name"
            android:maxLines="1"
            android:layoutDirection="rtl"
            android:imeOptions="actionNext"
            android:textColorHint="@color/testColorLogin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            >

        <com.google.android.material.textfield.TextInputEditText
           android:textSize="@dimen/text_login_Size"
            android:maxLines="1"
            android:id="@+id/username"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textColor="@color/testColorLogin"
        />

    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_et"
            app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/password"
            android:maxLines="1"
            android:padding="10dp"
            android:layout_marginBottom="40dp"
            android:imeOptions="actionNext"
            android:layoutDirection="rtl"
            app:endIconMode="password_toggle"
            android:textColorHint="@color/testColorLogin"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/username_et"
            app:layout_constraintLeft_toLeftOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:textSize="@dimen/text_login_Size"
                android:id="@+id/password"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/testColorLogin"
                />

        </com.google.android.material.textfield.TextInputLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/login_btn"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password_et"
         android:textSize="@dimen/login_button_text_size"
         android:maxLines="1"
         android:imeOptions="actionNext"
         android:padding="15dp"
         android:layout_marginTop="40dp"
         android:textColor="#F4F1F1"
         android:elevation="10dp"
         android:text="@string/login_text"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/testColorLogin"
         />

        <TextView
            android:id="@+id/forget_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/forget_password_text_size"
            android:clickable="true"
            android:textColor="@color/textForgetPassword"
            app:layout_constraintTop_toBottomOf="@id/login_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>